@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-20T16:36:09Z",
+  "timestamp" : "2022-06-21T08:34:36Z",
   "count_outdated" : 196,
   "uniques_outdated" : 90,
   "count" : 223,
-  "uniques" : 106,
+  "uniques" : 107,
   "clones" : [
     {
       "timestamp": "2022-06-07T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-06-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
